test/files/neg/beanInfoDeprecation.check
beanInfoDeprecation.scala:2: warning: class BeanInfo in package beans is deprecated (since 2.12.0): the generation of BeanInfo classes is no longer supported
class C
      ^
error: No warnings can be incurred under -Xfatal-warnings.
one warning found
one error found
